--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  circular_countdown_timer: ^0.2.3
+  provider: ^6.0.5
   
 dev_dependencies:
   flutter_test:
