add database, database_services, pomodoro_repository and connecting to the pomodoro_controller

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^2.0.7
   circular_countdown_timer: ^0.2.3
   provider: ^6.0.5
+  sqflite: ^2.3.0
   
 dev_dependencies:
   flutter_test:
