--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   circular_countdown_timer: ^0.2.3
   provider: ^6.0.5
   sqflite: ^2.3.0
+  wakelock: ^0.6.2
   
 dev_dependencies:
   flutter_test:
