--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.0.5
   sqflite: ^2.3.0
   wakelock: ^0.6.2
+  equatable: ^2.0.0
   
 dev_dependencies:
   flutter_test:
