--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   wakelock: ^0.6.2
   equatable: ^2.0.0
   uuid: ^4.0.0
+  flutter_phoenix: ^1.1.1
   
 dev_dependencies:
   flutter_test:
