--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   equatable: ^2.0.0
   uuid: ^4.0.0
   flutter_phoenix: ^1.1.1
+  intl: ^0.18.1
   
 dev_dependencies:
   flutter_test:
