--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,19 @@ dependencies:
   uuid: ^4.0.0
   flutter_phoenix: ^1.1.1
   intl: ^0.18.1
+  flutter_native_splash: ^2.3.4
+  flutter_launcher_icons: ^0.13.1
+
+flutter_native_splash:
+  color: '#121214'
+  image: 'assets/logo/app-logo.png'
+  android: true
+
+flutter_launcher_icons:
+  image_path: 'assets/logo/app-logo.png'
+  android: 'launcher_icon'
+  adaptive_icon_background: '#FFFFFF'
+  adaptive_icon_foreground: 'assets/logo/app-logo.png'
   
 dev_dependencies:
   flutter_test:
