--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   intl: ^0.18.1
   flutter_native_splash: ^2.3.4
   flutter_launcher_icons: ^0.13.1
+  flutter_local_notifications: ^13.0.0
+  timezone: ^0.9.2
+  flutter_native_timezone_updated_gradle: ^2.0.3
+  permission_handler: ^11.0.1
 
 flutter_native_splash:
   color: '#121214'
