--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   timezone: ^0.9.2
   flutter_native_timezone_updated_gradle: ^2.0.3
   permission_handler: ^11.0.1
+  image_picker: ^1.0.4
 
 flutter_native_splash:
   color: '#121214'
