--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   circular_countdown_timer: ^0.2.3
@@ -27,6 +29,7 @@ dependencies:
   flutter_native_timezone_updated_gradle: ^2.0.3
   permission_handler: ^11.0.1
   image_picker: ^1.0.4
+  calendar_date_picker2: ^0.5.3
 
 flutter_native_splash:
   color: '#121214'
