add profile image size reduction

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   permission_handler: ^11.0.1
   image_picker: ^1.0.4
   calendar_date_picker2: ^0.5.3
+  flutter_image_compress: ^2.1.0
 
 flutter_native_splash:
   color: '#121214'
