--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^1.0.4
   calendar_date_picker2: ^0.5.3
   flutter_image_compress: ^2.1.0
+  flutter_animate: ^4.2.0+1
 
 flutter_native_splash:
   color: '#121214'
